added Reset Password

--- a/public/stylesheets/sass/login.sass
+++ b/public/stylesheets/sass/login.sass
@@ -86,3 +86,8 @@ img
     position: absolute
     right: 12px
     bottom: 0px
+  #forgot_password
+    font-size: 10px
+    position: absolute
+    right: 180px
+    bottom: 0px
